--- a/GenLauncherNet/packages.config
+++ b/GenLauncherNet/packages.config
@@ -4,6 +4,8 @@
   <package id="Minio" version="3.1.13" targetFramework="net46" />
   <package id="RestSharp" version="106.10.1" targetFramework="net46" />
   <package id="SevenZipExtractor" version="1.0.15" targetFramework="net45" />
+  <package id="SymbolicLinkSupport" version="1.2.0" targetFramework="net46" />
   <package id="System.Reactive" version="4.0.0" targetFramework="net46" />
   <package id="System.Reactive.Linq" version="4.0.0" targetFramework="net46" />
+  <package id="YamlDotNet" version="11.2.1" targetFramework="net46" />
 </packages>
