--- a/GenLauncherNet/GenLauncher.csproj
+++ b/GenLauncherNet/GenLauncher.csproj
@@ -138,7 +138,7 @@
     <Compile Include="Utility\BigHandler.cs" />
     <Compile Include="Utility\GameOptionsHandler.cs" />
     <Compile Include="Utility\BlackWhiteImageGenerator.cs" />
-    <Compile Include="ColorsInfo.cs" />
+    <Compile Include="DataClasses\ColorsInfo.cs" />
     <Compile Include="DataClasses\GameModification.cs" />
     <Compile Include="DataClasses\ReposModificationsVersion.cs" />
     <Compile Include="Utility\MD5ChecksumCalculator.cs" />
@@ -146,7 +146,7 @@
     <Compile Include="GameLauncher.cs" />
     <Compile Include="Utility\GentoolHandler.cs" />
     <Compile Include="HttpHandlers\ContentDownloader.cs" />
-    <Compile Include="DownloadLinkParser.cs" />
+    <Compile Include="Utility\DownloadLinkParser.cs" />
     <Compile Include="HttpHandlers\ModificationDownloader.cs" />
     <Compile Include="DataClasses\ModificationFileInfo.cs" />
     <Compile Include="DataClasses\StringHashSet.cs" />
@@ -178,7 +178,7 @@
     <Compile Include="WPFElements\ChangeLogButton.cs" />
     <Compile Include="DataClasses\ComboBoxData.cs" />
     <Compile Include="DataHandler.cs" />
-    <Compile Include="GridControls.cs" />
+    <Compile Include="WPFElements\GridControls.cs" />
     <Compile Include="HttpHandlers\GitHubCoreYamlReader.cs" />
     <Compile Include="HttpHandlers\GitHubMainDataReader.cs" />
     <Compile Include="DataClasses\ReposModsData.cs" />
