--- a/GenLauncherNet/GenLauncher.csproj
+++ b/GenLauncherNet/GenLauncher.csproj
@@ -153,6 +153,8 @@
     <Compile Include="DataClasses\SessionInformation.cs" />
     <Compile Include="Utility\GeneralUtilities.cs" />
     <Compile Include="Utility\TimeUtility.cs" />
+    <Compile Include="Utility\VulkanDllsHandler.cs" />
+    <Compile Include="DataClasses\VulkanData.cs" />
     <Compile Include="WPFElements\UpdateButton.cs" />
     <Compile Include="Windows\ManualAddMidificationWindow.xaml.cs">
       <DependentUpon>ManualAddMidificationWindow.xaml</DependentUpon>
@@ -179,7 +181,7 @@
     <Compile Include="DataClasses\ComboBoxData.cs" />
     <Compile Include="DataHandler.cs" />
     <Compile Include="WPFElements\GridControls.cs" />
-    <Compile Include="HttpHandlers\GitHubCoreYamlReader.cs" />
+    <Compile Include="HttpHandlers\GitHubYamlReader.cs" />
     <Compile Include="HttpHandlers\GitHubMainDataReader.cs" />
     <Compile Include="DataClasses\ReposModsData.cs" />
     <Compile Include="WPFElements\InfoTextBlock.cs" />
@@ -336,6 +338,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Images\uamG.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\vulkan.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SevenZipExtractor.1.0.15\build\SevenZipExtractor.targets" Condition="Exists('..\packages\SevenZipExtractor.1.0.15\build\SevenZipExtractor.targets')" />
