--- a/GenLauncherNet/d3d8.cfg
+++ b/GenLauncherNet/d3d8.cfg
@@ -7,6 +7,9 @@ cursor=1
 scroll=14
 fps=3
 [updater]
-Maps_1v1_ZH.zip=1
-Maps_2v2_ZH.zip=1
-Maps_3v3_ZH.zip=1
+CrackFixZH.zip=0
+RelaxMapsZH.zip=0
+RankedMapsZH.zip=0
+Maps_1v1_ZH.zip=0
+Maps_2v2_ZH.zip=0
+Maps_3v3_ZH.zip=0
